--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 body {
     font-family: Arial, sans-serif;
     background: linear-gradient(135deg, #ffffff, #d3d3d3, #1e90ff);
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    min-height: 100vh; /* Låt sidan fylla hela höjden */
     margin: 0;
     padding: 0;
-    flex-direction: column; /* Justerar så att allt är centrerat vertikalt */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start; /* Justera sidan uppifrån */
+}
+
+html {
+    height: 100%; /* Låt gradienten täcka hela sidan när man skrollar */
 }
 
 .quiz-container {
